Freeze the reported media time while audio is restarted

Audio renderer clock is used as a time source for the RendererImpl when
we have an audio stream. But audio renderer clock gets recreated when
switching audio streams, so we must avoid calling ARI::CurrentMediaTime
while an audio renderer is being restarted. This fixes a crash in the
media/avtrack/track-switching.html layout test.

BUG=715191

Review-Url: https://codereview.chromium.org/2890603004
Cr-Commit-Position: refs/heads/master@{#474175}

Former-commit-id: 9dd6cc8ed582ed45422be5c4a0dad00464d2639a